updated the Readme.md

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="src/img/Logo.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="css/style.css" />
-    <script type="module" src="src/js/script.js"></script>
+
     <title>ToDo App | time to do</title>
   </head>
   <body>
@@ -68,5 +68,5 @@
     </div>
     <div class="popUp hidden_PP"></div>
   </body>
-  <script src="src/js/script.js"></script>
+  <script type="module" src="src/js/script.mjs"></script>
 </html>
