Updated UI, fix some bags

--- a/index.html
+++ b/index.html
@@ -17,32 +17,31 @@
           <p class="greetings">Hello, Tomas!</p>
         </div>
         <div class="header__controls">
-          <div class="lang">
+          <!-- <div class="lang">
             <select>
               <option>Eng</option>
               <option>Rus</option>
             </select>
-          </div>
+          </div> -->
           <div class="themeSwitch">
             <input type="button" value="Dark" class="btnSwitch" />
           </div>
         </div>
       </div>
     </header>
-    <div class="line"></div>
+
     <!-- side bar -->
     <main class="side__wrapper">
       <div class="sideBar">
         <ul class="sideBar__list">
           <li class="ul_li active">
-            <a href="#" data-type="active">Active</a>
+            <a href="#" data-type="active" class="barList">Active</a>
           </li>
           <li class="ul_li">
-            <a href="#" data-type="complited">Complited</a>
+            <a href="#" data-type="complited" class="barList">Complited</a>
           </li>
         </ul>
       </div>
-      <div class="vertLine"></div>
       <!-- main content -->
       <div class="main">
         <div class="main__wrapper">
