added saving to localStorage, deleting from completed list

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
       <div class="header__wrapepr">
         <div class="header__logo">
-          <img src="src/img/Logo.svg" />
+          <a href="#"><img src="src/img/Logo.svg" /></a>
           <p class="greetings">Hello, Tomas!</p>
         </div>
         <div class="header__controls">
